<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>oj</groupId>
    <artifactId>oj_backend</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <name>oj_backend</name>
    <description>oj_backend</description>
    <properties>
        <java.version>17</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <spring-boot.version>2.6.13</spring-boot.version>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
        </dependency>
        <dependency>
            <groupId>com.baomidou</groupId>
            <artifactId>mybatis-plus-boot-starter</artifactId>
            <version>3.5.1</version>
        </dependency>

        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-redis</artifactId>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-security</artifactId>
        </dependency>
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <optional>true</optional>
        </dependency>
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.alibaba.fastjson2</groupId>
            <artifactId>fastjson2</artifactId>
            <version>2.0.25</version>
        </dependency>
        <dependency>
            <groupId>cn.hutool</groupId>
            <artifactId>hutool-all</artifactId>
            <version>5.8.37</version>
        </dependency>
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>dashscope-sdk-java</artifactId>
            <version>2.15.0</version> <!-- Latest stable version as of reference [<sup data-citation='{&quot;id&quot;:1,&quot;url&quot;:&quot;https://central.sonatype.com/artifact/com.alibaba/dashscope-sdk-java/2.15.0#:~:text=%3CartifactId%3Edashscope-sdk-java%3C%2FartifactId%3E%20%3Cversion%3E2.15.0%3C%2Fversion%3E%20%3Cproperties%3E,%3Cmaven.compiler.source%3E8%3C%2Fmaven.compiler.source%3E%20%3Cmaven.compiler.target%3E8%3C%2Fmaven.compiler.target%3E%20%3Cproject.build.sourceEncoding%3EUTF-8%3C%2Fproject.build.sourceEncoding%3E%20%3Cmaven-antrun.version%3E1.8%3C%2Fmaven-antrun.version%3E&quot;,&quot;title&quot;:&quot;Maven Central: com.alibaba:dashscope-sdk-java:2.15.0&quot;,&quot;content&quot;:&quot;pkg:mavencomalibabadashscope-sdk-java2150 Used in: Loading components Overview Overview Versions Versions Dependents Dependents Dependencies Dependencies Loading Loading Loading Loading Loading&quot;}'>1</sup>](https://central.sonatype.com/artifact/com.alibaba/dashscope-sdk-java/2.15.0#:~:text=%3CartifactId%3Edashscope-sdk-java%3C%2FartifactId%3E%20%3Cversion%3E2.15.0%3C%2Fversion%3E%20%3Cproperties%3E,%3Cmaven.compiler.source%3E8%3C%2Fmaven.compiler.source%3E%20%3Cmaven.compiler.target%3E8%3C%2Fmaven.compiler.target%3E%20%3Cproject.build.sourceEncoding%3EUTF-8%3C%2Fproject.build.sourceEncoding%3E%20%3Cmaven-antrun.version%3E1.8%3C%2Fmaven-antrun.version%3E) -->
        </dependency>

        <!-- 发送邮件 -->
        <dependency>
            <groupId>com.sun.mail</groupId>
            <artifactId>javax.mail</artifactId>
            <version>1.6.2</version>
        </dependency>
        <!--转为html-->
        <dependency>
            <groupId>com.vladsch.flexmark</groupId>
            <artifactId>flexmark-all</artifactId>
            <version>0.64.0</version>
        </dependency>
        <!-- JWT -->
        <dependency>
            <groupId>io.jsonwebtoken</groupId>
            <artifactId>jjwt</artifactId>
            <version>0.12.5</version>
        </dependency>

    </dependencies>
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>17</source>
                    <target>17</target>
                    <encoding>UTF-8</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-maven-plugin</artifactId>
                <version>${spring-boot.version}</version>
                <configuration>
                    <mainClass>oj.oj_backend.OjBackendApplication</mainClass>
                    <skip>true</skip>
                </configuration>
                <executions>
                    <execution>
                        <id>repackage</id>
                        <goals>
                            <goal>repackage</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>

        </plugins>
    </build>

</project>
